@@ -144,7 +144,9 @@
 
 #main_head_tail_settings
 		<td class="settings_toggle">
-			<a href="#" onclick="$('#settings').toggle();"><img src="{flava}settings.png" width="35" height="35"/></a>
+			<a href="#" onclick="$('#settings').toggle();" class="settings_link">
+				<span>Change Settings</span><img src="{flava}settings.png" width="35" height="35"/>
+			</a>
 		</td>
 		</tr>
 	</table>
