@@ -3,8 +3,9 @@ Development Portal (2015-06-18 shi)
 Added settings dropdown buttons and link
 Added translations for settings text
 Fixed about page options
-Added settings dropdown to publisher page
-Hide breadcrumbs on country / publisher landing page
+Added settings icon for themes
+Hide breadcrumbs on country / publisher landing 
+Added hover state to settings link
 
 
 Development Portal (2015-06-15 shi)
